--- a/fronted/index.html
+++ b/fronted/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Mindle</title>
 </head>
 <body>
-    MIAUUUUUUU
+    <button type="button">Iniciar sesión</button>
+    <h1>Mindle</h1>
+    <form>
+        <button type="button">Jugar</button>
+        <br>
+        <br>
+        <button type="button">Diccionario</button>
+        <h1>Ranking</h1>
+    <ol>
+        <li value="1"> Jugador 1</li>
+        <li> Jugador 2</li>   
+        <li> Jugador 3</li>   
+        <li> Jugador 4</li>   
+        <li> Jugador 5</li>       
+    </ol>
+    </form>
 </body>
+
 </html>
