Primera Version Registrarse/ Iniciar Sesion

--- a/fronted/Registrarse.html
+++ b/fronted/Registrarse.html
@@ -12,6 +12,9 @@
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
+        <label for="ColorFav">Color favorito: </label>
+        <input type="color" id="ColorFav" name ="ColorFav" 
+        <br>
         <p>¿Ya tienes una cuenta?</p>
         <a target="_blank" href="">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion-->
     </form>
