--- a/fronted/InicioDeSesion.html
+++ b/fronted/InicioDeSesion.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html 
 <head>       
-    <title>Registrate en Mindle </title>
+    <title>Bienvenido a Mindle</title>
 </head>
 <body>
-    <h1>Registrarse</h1>
+    <h1>Iniciar sesion</h1>
     <form>
         <label for="UserID">Nombre de usuario: </label>
         <input id="UserID" name ="Nommbre de Usuario"/>
@@ -12,8 +12,12 @@
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
-        <p>¿Ya tienes una cuenta?</p>
-        <a target="_blank" href="">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion-->
+        <a target="_blank" href="">¿Tienes problemas para iniciar sesión? </a> 
+        <br>
+        <p>¿No tienes una cuenta?</p>
+        <a target="_blank" href="">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion-->
+        <br>
+        
     </form>
 </body>
 </html>
