--- a/frontend/pagdicc.html
+++ b/frontend/pagdicc.html
@@ -7,6 +7,14 @@
     <h1>Diccionario</h1>
     <h2> Barra de búsqueda <h2> <!--poner marco grrr-->
     <img src="https://img.freepik.com/vector-premium/capsula-lupa-icono-contorno-capsula-lupa-vector-icono-color-plano-aislado_96318-76629.jpg?w=740" height="40"/>
+    <h2> Nombres de los diagnósticos </h2> <!--tmb en con marco-->
+    <ul>
+        <li> 1............</li>
+        <li> 2............</li>   
+        <li> 3............</li>   
+        <li> 4............</li>   
+        <li> 5............</li>       
+    </ul>
     <form>
 </body>
 </html>
